// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSortedListOfChecks G24240 should match 1`] = `
Object {
  "sortedChecks": Array [
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ssd5",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "1:1",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "mat 1:1",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "gw48",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦς",
        "Reference": "1:16",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
        ],
        "quote": Array [
          "Ἰησοῦς",
        ],
        "quoteString": "Ἰησοῦς",
        "refs": Array [
          "mat 1:16",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "wvjd",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "1:18",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "mat 1:18",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "jqrh",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦν",
        "Reference": "1:21",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "Ἰησοῦν",
        ],
        "quoteString": "Ἰησοῦν",
        "refs": Array [
          "mat 1:21",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ef6y",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦν τὸν Ναζωραῖον",
        "Reference": "18:5",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "ὁ",
          "Ναζωραῖος",
        ],
        "morph": Array [
          "Gr,N,,,,,AMS,",
          "Gr,EA,,,,AMS,",
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "Ἰησοῦν",
          "τὸν",
          "Ναζωραῖον",
        ],
        "quoteString": "Ἰησοῦν τὸν Ναζωραῖον",
        "refs": Array [
          "jhn 18:5",
        ],
        "strong": Array [
          "G24240",
          "G35880",
          "G34800",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "hjd4",
        "Occurrence": "1",
        "OrigWords": "Κύριος Ἰησοῦς",
        "Reference": "1:21",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
          "Gr,N,,,,,NMS,",
        ],
        "quote": Array [
          "Κύριος",
          "Ἰησοῦς",
        ],
        "quoteString": "Κύριος Ἰησοῦς",
        "refs": Array [
          "act 1:21",
        ],
        "strong": Array [
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "sef7",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ Χριστοῦ",
        "Reference": "2:38",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
          "Χριστοῦ",
        ],
        "quoteString": "Ἰησοῦ Χριστοῦ",
        "refs": Array [
          "act 2:38",
        ],
        "strong": Array [
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "krp4",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ Χριστοῦ τοῦ Ναζωραίου",
        "Reference": "3:6",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "χριστός",
          "ὁ",
          "Ναζωραῖος",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
          "Gr,EA,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
          "Χριστοῦ",
          "τοῦ",
          "Ναζωραίου",
        ],
        "quoteString": "Ἰησοῦ Χριστοῦ τοῦ Ναζωραίου",
        "refs": Array [
          "act 3:6",
        ],
        "strong": Array [
          "G24240",
          "G55470",
          "G35880",
          "G34800",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ecm6",
        "Occurrence": "1",
        "OrigWords": "Κυρίου Ἰησοῦ",
        "Reference": "4:33",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Κυρίου",
          "Ἰησοῦ",
        ],
        "quoteString": "Κυρίου Ἰησοῦ",
        "refs": Array [
          "act 4:33",
        ],
        "strong": Array [
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "gbej",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦς ὁ Ναζωραῖος",
        "Reference": "6:14",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "ὁ",
          "Ναζωραῖος",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
          "Gr,EA,,,,NMS,",
          "Gr,N,,,,,NMS,",
        ],
        "quote": Array [
          "Ἰησοῦς",
          "ὁ",
          "Ναζωραῖος",
        ],
        "quoteString": "Ἰησοῦς ὁ Ναζωραῖος",
        "refs": Array [
          "act 6:14",
        ],
        "strong": Array [
          "G24240",
          "G35880",
          "G34800",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ctyf",
        "Occurrence": "1",
        "OrigWords": "Κύριε Ἰησοῦ",
        "Reference": "7:59",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,VMS,",
          "Gr,N,,,,,VMS,",
        ],
        "quote": Array [
          "Κύριε",
          "Ἰησοῦ",
        ],
        "quoteString": "Κύριε Ἰησοῦ",
        "refs": Array [
          "act 7:59",
        ],
        "strong": Array [
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "sk6a",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦς Χριστός",
        "Reference": "9:34",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
          "Gr,N,,,,,NMS,",
        ],
        "quote": Array [
          "Ἰησοῦς",
          "Χριστός",
        ],
        "quoteString": "Ἰησοῦς Χριστός",
        "refs": Array [
          "act 9:34",
        ],
        "strong": Array [
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "f6b2",
        "Occurrence": "1",
        "OrigWords": "Κύριον Ἰησοῦν Χριστόν",
        "Reference": "11:17",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,AMS,",
          "Gr,N,,,,,AMS,",
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "Κύριον",
          "Ἰησοῦν",
          "Χριστόν",
        ],
        "quoteString": "Κύριον Ἰησοῦν Χριστόν",
        "refs": Array [
          "act 11:17",
        ],
        "strong": Array [
          "G29620",
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "tb4b",
        "Occurrence": "1",
        "OrigWords": "Κύριον Ἰησοῦν",
        "Reference": "11:20",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,AMS,",
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "Κύριον",
          "Ἰησοῦν",
        ],
        "quoteString": "Κύριον Ἰησοῦν",
        "refs": Array [
          "act 11:20",
        ],
        "strong": Array [
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "fh56",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ τοῦ Ναζωραίου",
        "Reference": "26:9",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "ὁ",
          "Ναζωραῖος",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,EA,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
          "τοῦ",
          "Ναζωραίου",
        ],
        "quoteString": "Ἰησοῦ τοῦ Ναζωραίου",
        "refs": Array [
          "act 26:9",
        ],
        "strong": Array [
          "G24240",
          "G35880",
          "G34800",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "nvyv",
        "Occurrence": "1",
        "OrigWords": "Κυρίου Ἰησοῦ Χριστοῦ",
        "Reference": "28:31",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Κυρίου",
          "Ἰησοῦ",
          "Χριστοῦ",
        ],
        "quoteString": "Κυρίου Ἰησοῦ Χριστοῦ",
        "refs": Array [
          "act 28:31",
        ],
        "strong": Array [
          "G29620",
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "dd98",
        "Occurrence": "1",
        "OrigWords": "Χριστοῦ Ἰησοῦ",
        "Reference": "1:1",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Χριστοῦ",
          "Ἰησοῦ",
        ],
        "quoteString": "Χριστοῦ Ἰησοῦ",
        "refs": Array [
          "rom 1:1",
        ],
        "strong": Array [
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "msju",
        "Occurrence": "1",
        "OrigWords": "Χριστὸν Ἰησοῦν",
        "Reference": "6:3",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,AMS,",
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "Χριστὸν",
          "Ἰησοῦν",
        ],
        "quoteString": "Χριστὸν Ἰησοῦν",
        "refs": Array [
          "rom 6:3",
        ],
        "strong": Array [
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "g4zm",
        "Occurrence": "1",
        "OrigWords": "Χριστὸς Ἰησοῦς",
        "Reference": "8:34",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
          "Gr,N,,,,,NMS,",
        ],
        "quote": Array [
          "Χριστὸς",
          "Ἰησοῦς",
        ],
        "quoteString": "Χριστὸς Ἰησοῦς",
        "refs": Array [
          "rom 8:34",
        ],
        "strong": Array [
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "jxfg",
        "Occurrence": "1",
        "OrigWords": "Χριστῷ Ἰησοῦ",
        "Reference": "3:14",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "Χριστῷ Ἰησοῦ",
        "refs": Array [
          "gal 3:14",
        ],
        "strong": Array [
          "G55470",
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "kj8g",
        "Occurrence": "1",
        "OrigWords": "εἰς τὸν Ἰησοῦν",
        "Reference": "12:11",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "εἰς",
          "ὁ",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,A,,,",
          "Gr,EA,,,,AMS,",
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "εἰς",
          "τὸν",
          "Ἰησοῦν",
        ],
        "quoteString": "εἰς τὸν Ἰησοῦν",
        "refs": Array [
          "jhn 12:11",
        ],
        "strong": Array [
          "G15190",
          "G35880",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "v3yd",
        "Occurrence": "1",
        "OrigWords": "ἐν Χριστῷ Ἰησοῦ",
        "Reference": "3:24",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν Χριστῷ Ἰησοῦ",
        "refs": Array [
          "rom 3:24",
        ],
        "strong": Array [
          "G17220",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "jh9g",
        "Occurrence": "1",
        "OrigWords": "ἐν Κυρίῳ Ἰησοῦ",
        "Reference": "14:14",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Κυρίῳ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν Κυρίῳ Ἰησοῦ",
        "refs": Array [
          "rom 14:14",
        ],
        "strong": Array [
          "G17220",
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "qaqg",
        "Occurrence": "1",
        "OrigWords": "ἐν γὰρ Χριστῷ Ἰησοῦ",
        "Reference": "4:15",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "γάρ",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,CC,,,,,,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "γὰρ",
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν γὰρ Χριστῷ Ἰησοῦ",
        "refs": Array [
          "1co 4:15",
        ],
        "strong": Array [
          "G17220",
          "G10630",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "cq7h",
        "Occurrence": "1",
        "OrigWords": "εἰς Χριστὸν Ἰησοῦν",
        "Reference": "2:16",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "εἰς",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,A,,,",
          "Gr,N,,,,,AMS,",
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "εἰς",
          "Χριστὸν",
          "Ἰησοῦν",
        ],
        "quoteString": "εἰς Χριστὸν Ἰησοῦν",
        "refs": Array [
          "gal 2:16",
        ],
        "strong": Array [
          "G15190",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "xgsz",
        "Occurrence": "1",
        "OrigWords": "ἐν τῷ Κυρίῳ Ἰησοῦ",
        "Reference": "1:15",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "ὁ",
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,EA,,,,DMS,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "τῷ",
          "Κυρίῳ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν τῷ Κυρίῳ Ἰησοῦ",
        "refs": Array [
          "eph 1:15",
        ],
        "strong": Array [
          "G17220",
          "G35880",
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "a7ug",
        "Occurrence": "1",
        "OrigWords": "ἐν τῷ Χριστῷ Ἰησοῦ",
        "Reference": "3:11",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "ὁ",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,EA,,,,DMS,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "τῷ",
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν τῷ Χριστῷ Ἰησοῦ",
        "refs": Array [
          "eph 3:11",
        ],
        "strong": Array [
          "G17220",
          "G35880",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "jsfg",
        "Occurrence": "1",
        "OrigWords": "ἐν τῷ Ἰησοῦ",
        "Reference": "4:21",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "ὁ",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,EA,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "τῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν τῷ Ἰησοῦ",
        "refs": Array [
          "eph 4:21",
        ],
        "strong": Array [
          "G17220",
          "G35880",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "ckq4",
        "Occurrence": "1",
        "OrigWords": "ἐν Κυρίῳ Ἰησοῦ Χριστῷ",
        "Reference": "3:12",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "κύριος",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Κυρίῳ",
          "Ἰησοῦ",
          "Χριστῷ",
        ],
        "quoteString": "ἐν Κυρίῳ Ἰησοῦ Χριστῷ",
        "refs": Array [
          "2th 3:12",
        ],
        "strong": Array [
          "G17220",
          "G29620",
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "tfq3",
        "Occurrence": "1",
        "OrigWords": "ἐν Ἰησοῦ",
        "Reference": "1:9",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν Ἰησοῦ",
        "refs": Array [
          "rev 1:9",
        ],
        "strong": Array [
          "G17220",
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "names",
        "GroupID": "joshua",
        "ID": "qvc4",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "7:45",
        "TWLink": "rc://*/tw/dict/bible/names/joshua",
        "Tags": "name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "act 7:45",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "names",
        "GroupID": "joshua",
        "ID": "ncce",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦς",
        "Reference": "4:8",
        "TWLink": "rc://*/tw/dict/bible/names/joshua",
        "Tags": "name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
        ],
        "quote": Array [
          "Ἰησοῦς",
        ],
        "quoteString": "Ἰησοῦς",
        "refs": Array [
          "heb 4:8",
        ],
        "strong": Array [
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "holyspirit",
        "ID": "mtmk",
        "Occurrence": "1",
        "OrigWords": "Πνεῦμα Ἰησοῦ",
        "Reference": "16:7",
        "TWLink": "rc://*/tw/dict/bible/kt/holyspirit",
        "Tags": "keyterm",
        "lemmas": Array [
          "πνεῦμα",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NNS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Πνεῦμα",
          "Ἰησοῦ",
        ],
        "quoteString": "Πνεῦμα Ἰησοῦ",
        "refs": Array [
          "act 16:7",
        ],
        "strong": Array [
          "G41510",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "holyspirit",
        "ID": "q82y",
        "Occurrence": "1",
        "OrigWords": "Πνεύματος Ἰησοῦ Χριστοῦ",
        "Reference": "1:19",
        "TWLink": "rc://*/tw/dict/bible/kt/holyspirit",
        "Tags": "keyterm",
        "lemmas": Array [
          "πνεῦμα",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,GNS,",
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Πνεύματος",
          "Ἰησοῦ",
          "Χριστοῦ",
        ],
        "quoteString": "Πνεύματος Ἰησοῦ Χριστοῦ",
        "refs": Array [
          "php 1:19",
        ],
        "strong": Array [
          "G41510",
          "G24240",
          "G55470",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "lord",
        "ID": "vwr3",
        "Occurrence": "1",
        "OrigWords": "Κύριον",
        "Reference": "4:7",
        "TWLink": "rc://*/tw/dict/bible/kt/lord",
        "Tags": "keyterm",
        "lemmas": Array [
          "κύριος",
        ],
        "morph": Array [
          "Gr,N,,,,,AMS,",
        ],
        "quote": Array [
          "Κύριον",
        ],
        "quoteString": "Κύριον",
        "refs": Array [
          "mat 4:7",
        ],
        "strong": Array [
          "G29620",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "wordofgod",
        "ID": "w2b3",
        "Occurrence": "1",
        "OrigWords": "λόγος τοῦ Ἰησοῦ",
        "Reference": "18:32",
        "TWLink": "rc://*/tw/dict/bible/kt/wordofgod",
        "Tags": "keyterm",
        "lemmas": Array [
          "λόγος",
          "ὁ",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
          "Gr,EA,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "λόγος",
          "τοῦ",
          "Ἰησοῦ",
        ],
        "quoteString": "λόγος τοῦ Ἰησοῦ",
        "refs": Array [
          "jhn 18:32",
        ],
        "strong": Array [
          "G30560",
          "G35880",
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "dayofthelord",
        "ID": "cv26",
        "Occurrence": "1",
        "OrigWords": "ἡμέρας Χριστοῦ Ἰησοῦ",
        "Reference": "1:6",
        "TWLink": "rc://*/tw/dict/bible/kt/dayofthelord",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἡμέρα",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GFS,",
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "ἡμέρας",
          "Χριστοῦ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἡμέρας Χριστοῦ Ἰησοῦ",
        "refs": Array [
          "php 1:6",
        ],
        "strong": Array [
          "G22500",
          "G55470",
          "G24240",
        ],
      },
    ],
  ],
  "sortedtWords": Array [
    "kt/jesus",
    "kt/inchrist",
    "names/joshua",
    "kt/holyspirit",
    "kt/lord",
    "kt/wordofgod",
    "kt/dayofthelord",
  ],
}
`;

exports[`getSortedListOfChecks ἰησοῦ should match 1`] = `
Object {
  "sortedChecks": Array [
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ssd5",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "1:1",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "mat 1:1",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ssd5",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "1:1",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "mat 1:18",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "wvjd",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "1:18",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "mat 1:18",
        ],
        "strong": Array [
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "sef7",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ Χριστοῦ",
        "Reference": "2:38",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
          "Χριστοῦ",
        ],
        "quoteString": "Ἰησοῦ Χριστοῦ",
        "refs": Array [
          "act 2:38",
        ],
        "strong": Array [
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "krp4",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ Χριστοῦ τοῦ Ναζωραίου",
        "Reference": "3:6",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "χριστός",
          "ὁ",
          "Ναζωραῖος",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
          "Gr,EA,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
          "Χριστοῦ",
          "τοῦ",
          "Ναζωραίου",
        ],
        "quoteString": "Ἰησοῦ Χριστοῦ τοῦ Ναζωραίου",
        "refs": Array [
          "act 3:6",
        ],
        "strong": Array [
          "G24240",
          "G55470",
          "G35880",
          "G34800",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ecm6",
        "Occurrence": "1",
        "OrigWords": "Κυρίου Ἰησοῦ",
        "Reference": "4:33",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Κυρίου",
          "Ἰησοῦ",
        ],
        "quoteString": "Κυρίου Ἰησοῦ",
        "refs": Array [
          "act 4:33",
        ],
        "strong": Array [
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "ctyf",
        "Occurrence": "1",
        "OrigWords": "Κύριε Ἰησοῦ",
        "Reference": "7:59",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,VMS,",
          "Gr,N,,,,,VMS,",
        ],
        "quote": Array [
          "Κύριε",
          "Ἰησοῦ",
        ],
        "quoteString": "Κύριε Ἰησοῦ",
        "refs": Array [
          "act 7:59",
        ],
        "strong": Array [
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "fh56",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ τοῦ Ναζωραίου",
        "Reference": "26:9",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "Ἰησοῦς",
          "ὁ",
          "Ναζωραῖος",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,EA,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
          "τοῦ",
          "Ναζωραίου",
        ],
        "quoteString": "Ἰησοῦ τοῦ Ναζωραίου",
        "refs": Array [
          "act 26:9",
        ],
        "strong": Array [
          "G24240",
          "G35880",
          "G34800",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "nvyv",
        "Occurrence": "1",
        "OrigWords": "Κυρίου Ἰησοῦ Χριστοῦ",
        "Reference": "28:31",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "κύριος",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Κυρίου",
          "Ἰησοῦ",
          "Χριστοῦ",
        ],
        "quoteString": "Κυρίου Ἰησοῦ Χριστοῦ",
        "refs": Array [
          "act 28:31",
        ],
        "strong": Array [
          "G29620",
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "dd98",
        "Occurrence": "1",
        "OrigWords": "Χριστοῦ Ἰησοῦ",
        "Reference": "1:1",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Χριστοῦ",
          "Ἰησοῦ",
        ],
        "quoteString": "Χριστοῦ Ἰησοῦ",
        "refs": Array [
          "rom 1:1",
        ],
        "strong": Array [
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "jesus",
        "ID": "jxfg",
        "Occurrence": "1",
        "OrigWords": "Χριστῷ Ἰησοῦ",
        "Reference": "3:14",
        "TWLink": "rc://*/tw/dict/bible/kt/jesus",
        "Tags": "keyterm; name",
        "lemmas": Array [
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "Χριστῷ Ἰησοῦ",
        "refs": Array [
          "gal 3:14",
        ],
        "strong": Array [
          "G55470",
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "v3yd",
        "Occurrence": "1",
        "OrigWords": "ἐν Χριστῷ Ἰησοῦ",
        "Reference": "3:24",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν Χριστῷ Ἰησοῦ",
        "refs": Array [
          "rom 3:24",
        ],
        "strong": Array [
          "G17220",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "jh9g",
        "Occurrence": "1",
        "OrigWords": "ἐν Κυρίῳ Ἰησοῦ",
        "Reference": "14:14",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Κυρίῳ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν Κυρίῳ Ἰησοῦ",
        "refs": Array [
          "rom 14:14",
        ],
        "strong": Array [
          "G17220",
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "qaqg",
        "Occurrence": "1",
        "OrigWords": "ἐν γὰρ Χριστῷ Ἰησοῦ",
        "Reference": "4:15",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "γάρ",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,CC,,,,,,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "γὰρ",
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν γὰρ Χριστῷ Ἰησοῦ",
        "refs": Array [
          "1co 4:15",
        ],
        "strong": Array [
          "G17220",
          "G10630",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "xgsz",
        "Occurrence": "1",
        "OrigWords": "ἐν τῷ Κυρίῳ Ἰησοῦ",
        "Reference": "1:15",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "ὁ",
          "κύριος",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,EA,,,,DMS,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "τῷ",
          "Κυρίῳ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν τῷ Κυρίῳ Ἰησοῦ",
        "refs": Array [
          "eph 1:15",
        ],
        "strong": Array [
          "G17220",
          "G35880",
          "G29620",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "a7ug",
        "Occurrence": "1",
        "OrigWords": "ἐν τῷ Χριστῷ Ἰησοῦ",
        "Reference": "3:11",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "ὁ",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,EA,,,,DMS,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "τῷ",
          "Χριστῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν τῷ Χριστῷ Ἰησοῦ",
        "refs": Array [
          "eph 3:11",
        ],
        "strong": Array [
          "G17220",
          "G35880",
          "G55470",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "jsfg",
        "Occurrence": "1",
        "OrigWords": "ἐν τῷ Ἰησοῦ",
        "Reference": "4:21",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "ὁ",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,EA,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "τῷ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν τῷ Ἰησοῦ",
        "refs": Array [
          "eph 4:21",
        ],
        "strong": Array [
          "G17220",
          "G35880",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "ckq4",
        "Occurrence": "1",
        "OrigWords": "ἐν Κυρίῳ Ἰησοῦ Χριστῷ",
        "Reference": "3:12",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "κύριος",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Κυρίῳ",
          "Ἰησοῦ",
          "Χριστῷ",
        ],
        "quoteString": "ἐν Κυρίῳ Ἰησοῦ Χριστῷ",
        "refs": Array [
          "2th 3:12",
        ],
        "strong": Array [
          "G17220",
          "G29620",
          "G24240",
          "G55470",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "inchrist",
        "ID": "tfq3",
        "Occurrence": "1",
        "OrigWords": "ἐν Ἰησοῦ",
        "Reference": "1:9",
        "TWLink": "rc://*/tw/dict/bible/kt/inchrist",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἐν",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,P,,,,,D,,,",
          "Gr,N,,,,,DMS,",
        ],
        "quote": Array [
          "ἐν",
          "Ἰησοῦ",
        ],
        "quoteString": "ἐν Ἰησοῦ",
        "refs": Array [
          "rev 1:9",
        ],
        "strong": Array [
          "G17220",
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "holyspirit",
        "ID": "mtmk",
        "Occurrence": "1",
        "OrigWords": "Πνεῦμα Ἰησοῦ",
        "Reference": "16:7",
        "TWLink": "rc://*/tw/dict/bible/kt/holyspirit",
        "Tags": "keyterm",
        "lemmas": Array [
          "πνεῦμα",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NNS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Πνεῦμα",
          "Ἰησοῦ",
        ],
        "quoteString": "Πνεῦμα Ἰησοῦ",
        "refs": Array [
          "act 16:7",
        ],
        "strong": Array [
          "G41510",
          "G24240",
        ],
      },
      Object {
        "Catagory": "kt",
        "GroupID": "holyspirit",
        "ID": "q82y",
        "Occurrence": "1",
        "OrigWords": "Πνεύματος Ἰησοῦ Χριστοῦ",
        "Reference": "1:19",
        "TWLink": "rc://*/tw/dict/bible/kt/holyspirit",
        "Tags": "keyterm",
        "lemmas": Array [
          "πνεῦμα",
          "Ἰησοῦς",
          "χριστός",
        ],
        "morph": Array [
          "Gr,N,,,,,GNS,",
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Πνεύματος",
          "Ἰησοῦ",
          "Χριστοῦ",
        ],
        "quoteString": "Πνεύματος Ἰησοῦ Χριστοῦ",
        "refs": Array [
          "php 1:19",
        ],
        "strong": Array [
          "G41510",
          "G24240",
          "G55470",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "wordofgod",
        "ID": "w2b3",
        "Occurrence": "1",
        "OrigWords": "λόγος τοῦ Ἰησοῦ",
        "Reference": "18:32",
        "TWLink": "rc://*/tw/dict/bible/kt/wordofgod",
        "Tags": "keyterm",
        "lemmas": Array [
          "λόγος",
          "ὁ",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,NMS,",
          "Gr,EA,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "λόγος",
          "τοῦ",
          "Ἰησοῦ",
        ],
        "quoteString": "λόγος τοῦ Ἰησοῦ",
        "refs": Array [
          "jhn 18:32",
        ],
        "strong": Array [
          "G30560",
          "G35880",
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "names",
        "GroupID": "joshua",
        "ID": "qvc4",
        "Occurrence": "1",
        "OrigWords": "Ἰησοῦ",
        "Reference": "7:45",
        "TWLink": "rc://*/tw/dict/bible/names/joshua",
        "Tags": "name",
        "lemmas": Array [
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "Ἰησοῦ",
        ],
        "quoteString": "Ἰησοῦ",
        "refs": Array [
          "act 7:45",
        ],
        "strong": Array [
          "G24240",
        ],
      },
    ],
    Array [
      Object {
        "Catagory": "kt",
        "GroupID": "dayofthelord",
        "ID": "cv26",
        "Occurrence": "1",
        "OrigWords": "ἡμέρας Χριστοῦ Ἰησοῦ",
        "Reference": "1:6",
        "TWLink": "rc://*/tw/dict/bible/kt/dayofthelord",
        "Tags": "keyterm",
        "lemmas": Array [
          "ἡμέρα",
          "χριστός",
          "Ἰησοῦς",
        ],
        "morph": Array [
          "Gr,N,,,,,GFS,",
          "Gr,N,,,,,GMS,",
          "Gr,N,,,,,GMS,",
        ],
        "quote": Array [
          "ἡμέρας",
          "Χριστοῦ",
          "Ἰησοῦ",
        ],
        "quoteString": "ἡμέρας Χριστοῦ Ἰησοῦ",
        "refs": Array [
          "php 1:6",
        ],
        "strong": Array [
          "G22500",
          "G55470",
          "G24240",
        ],
      },
    ],
  ],
  "sortedtWords": Array [
    "kt/jesus",
    "kt/inchrist",
    "kt/holyspirit",
    "kt/wordofgod",
    "names/joshua",
    "kt/dayofthelord",
  ],
}
`;

exports[`getStrongsFromChecks it should match 1`] = `
Array [
  "G24240",
  "G55470",
  "G17220",
  "G35880",
  "G29620",
  "G34800",
  "G41510",
  "G30560",
  "G10630",
  "G22500",
]
`;
